--- a/secrets/sealed-secret.yaml
+++ b/secrets/sealed-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
-  name: MYSECRETS
+  name: MYSECRET
   namespace: MYNAMESPACE
 spec:
   encryptedData:
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       creationTimestamp: null
-      name: MYSECRETS
+      name: MYSECRET
       namespace: MYNAMESPACE
 
 # 
