--- a/services/volume-claim.yaml
+++ b/services/volume-claim.yaml
@@ -13,7 +13,7 @@ spec:
 
 
 # 
-# PVCS can map to remove NFS shares, to local cluster storage, to Longhorn volumes, and other
+# PVCS can map to remote NFS shares, to local cluster storage, to Longhorn volumes, and other
 # persistent storage. The capacity as defined (10G in this example) can be enlarged but never
 # shrunken. See https://kubernetes.io/docs/concepts/storage/persistent-volumes/
 #
